--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>This Hex Color Code Is: <span class="hex"></span></h2>
-        <button class="colorBtn">Change color</button>
+        <button class="colorBtn">Change Background Color</button>
     </div>
     
 
